# ref_thread_local.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
compiletest/: Cargo.toml
compiletest/src/: lib.rs
compiletest/tests/compile-fail/: incorrect_visibility_restriction.rs  lifetime_not_long_enough.rs  static_is_private.rs  static_is_sized.rs
src/: lib.rs  refmanager.rs
tests/: test.rs
